--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "main" : "./lib/connect-session-ejdb",
     "dependencies" : {
-        "connect" : ">=2.0.0"
+        "connect" : ">=2.0.0",
+        "crc" : ">=0.2.0"
     }
 }
