--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "main" : "./lib/connect-session-ejdb",
     "dependencies" : {
         "connect" : ">=2.0.0",
-        "crc" : ">=0.2.0",
-        "ejdb" : ">=1.0.39"
+        "crc" : ">=0.2.0"
     }
 }
